--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
                 <p class="service-item-text">
                   - <strong>Visualização de Dados:</strong> Matplotlib, Seaborn.
                   <br>- <strong>Business Intelligence:</strong> Power BI, Looker Studio.</br>
+                  - <strong>Design e Prototipagem: </strong> Figma.
                 </p>
               </div>
 
